@@ -119,51 +119,6 @@
 					  </moduleControls>
 				  </moduleDefinition>
 				  <moduleDefinition>
-					  <friendlyName>Search_Blog</friendlyName>
-					  <defaultCacheTime>-1</defaultCacheTime>
-					  <moduleControls>
-						  <moduleControl>
-							  <controlKey />
-							  <controlSrc>DesktopModules/Blog/Search.ascx</controlSrc>
-							  <supportsPartialRendering>False</supportsPartialRendering>
-							  <controlTitle>Search</controlTitle>
-							  <controlType>View</controlType>
-							  <iconFile />
-							  <helpUrl />
-							  <supportsPopUps>False</supportsPopUps>
-							  <viewOrder>0</viewOrder>
-						  </moduleControl>
-					  </moduleControls>
-				  </moduleDefinition>
-				  <moduleDefinition>
-					  <friendlyName>Blog_Archive</friendlyName>
-					  <defaultCacheTime>-1</defaultCacheTime>
-					  <moduleControls>
-						  <moduleControl>
-							  <controlKey />
-							  <controlSrc>DesktopModules/Blog/Archive.ascx</controlSrc>
-							  <supportsPartialRendering>False</supportsPartialRendering>
-							  <controlTitle>Archive</controlTitle>
-							  <controlType>View</controlType>
-							  <iconFile />
-							  <helpUrl />
-							  <supportsPopUps>False</supportsPopUps>
-							  <viewOrder>0</viewOrder>
-						  </moduleControl>
-						  <moduleControl>
-							  <controlKey>Settings</controlKey>
-							  <controlSrc>DesktopModules/Blog/ArchiveSettings.ascx</controlSrc>
-							  <supportsPartialRendering>True</supportsPartialRendering>
-							  <controlTitle />
-							  <controlType>Edit</controlType>
-							  <iconFile />
-							  <helpUrl />
-							  <supportsPopUps>True</supportsPopUps>
-							  <viewOrder>0</viewOrder>
-						  </moduleControl>
-					  </moduleControls>
-				  </moduleDefinition>
-				  <moduleDefinition>
 					  <friendlyName>Blog_Categories</friendlyName>
 					  <defaultCacheTime>-1</defaultCacheTime>
 					  <moduleControls>
@@ -219,15 +174,60 @@
 						  </moduleControl>
 					  </moduleControls>
 				  </moduleDefinition>
+				  <moduleDefinition>
+					  <friendlyName>Search_Blog</friendlyName>
+					  <defaultCacheTime>-1</defaultCacheTime>
+					  <moduleControls>
+						  <moduleControl>
+							  <controlKey />
+							  <controlSrc>DesktopModules/Blog/Search.ascx</controlSrc>
+							  <supportsPartialRendering>False</supportsPartialRendering>
+							  <controlTitle>Search</controlTitle>
+							  <controlType>View</controlType>
+							  <iconFile />
+							  <helpUrl />
+							  <supportsPopUps>False</supportsPopUps>
+							  <viewOrder>0</viewOrder>
+						  </moduleControl>
+					  </moduleControls>
+				  </moduleDefinition>
+				  <moduleDefinition>
+					  <friendlyName>Blog_Archive</friendlyName>
+					  <defaultCacheTime>-1</defaultCacheTime>
+					  <moduleControls>
+						  <moduleControl>
+							  <controlKey />
+							  <controlSrc>DesktopModules/Blog/Archive.ascx</controlSrc>
+							  <supportsPartialRendering>False</supportsPartialRendering>
+							  <controlTitle>Archive</controlTitle>
+							  <controlType>View</controlType>
+							  <iconFile />
+							  <helpUrl />
+							  <supportsPopUps>False</supportsPopUps>
+							  <viewOrder>0</viewOrder>
+						  </moduleControl>
+						  <moduleControl>
+							  <controlKey>Settings</controlKey>
+							  <controlSrc>DesktopModules/Blog/ArchiveSettings.ascx</controlSrc>
+							  <supportsPartialRendering>True</supportsPartialRendering>
+							  <controlTitle />
+							  <controlType>Edit</controlType>
+							  <iconFile />
+							  <helpUrl />
+							  <supportsPopUps>True</supportsPopUps>
+							  <viewOrder>0</viewOrder>
+						  </moduleControl>
+					  </moduleControls>
+				  </moduleDefinition>
 			  </moduleDefinitions>
 		  </desktopModule>
 		  <eventMessage>
 			<processorType>DotNetNuke.Entities.Modules.EventMessageProcessor, DotNetNuke</processorType>
 			<processorCommand>UpgradeModule</processorCommand>
 			<attributes>
-			  <businessControllerClass>DotNetNuke.Modules.Blog.Business.InterfaceController</businessControllerClass>
+			  <businessControllerClass>DotNetNuke.Modules.Blog.Components.Controllers.InterfaceController</businessControllerClass>
 			  <desktopModuleID>[DESKTOPMODULEID]</desktopModuleID>
-			  <upgradeVersionsList>04.01.00</upgradeVersionsList>
+			  <upgradeVersionsList>04.01.00,05.00.00</upgradeVersionsList>
 			</attributes>
 		  </eventMessage>
 		</component>
